# cpv-framework

./: .gitmodules  .travis.yml  LICENSE  README.md  build-debug.sh  build-release.sh  build.sh  clean.sh  install-dependencies.sh
benchmarks/: README.md  _runner.py  run_benchmarks.sh
benchmarks/targets/actix-web/: Cargo.toml  build.sh  run.sh  version.sh
benchmarks/targets/aspnetcore/: .gitignore  Program.cs  Startup.cs  build.sh  run.sh  version.sh
benchmarks/targets/cpv-framework/: CMakeLists.txt  Main.cpp  build.sh  run.sh  version.sh
benchmarks/targets/hyper/: Cargo.toml  build.sh  run.sh  version.sh
benchmarks/targets/seastar-httpd/: build.sh  httpd.cpp  run.sh  version.sh
debian/: changelog  control  copyright  rules
debian/scripts/: build_cpvframework.sh  get_version.sh  install_cpvframework.sh
docs/: ApplicationAndModules.md  DependencyInjectionContainer.md  HttpServerRequestHandlers.md  ReleaseNotes.md  Roadmap.md  Serialization.md
docs/img/: example-app-design.xml
examples/HelloWorld/: Main.cpp  run.sh
include/CPVFramework/Allocators/: DebugAllocator.hpp  (+2 more)
src/: CMakeLists.txt
src/Application/: Application.cpp  ApplicationData.cpp  ApplicationData.hpp  ApplicationState.cpp
src/Application/Modules/: HttpServerModule.cpp  HttpServerRoutingModule.cpp  LoggingModule.cpp
src/Container/: Aop.cpp  Container.cpp  ContainerData.hpp  ContainerImpl.cpp  ContainerImpl.hpp  ServiceStorage.cpp
src/Exceptions/: Exception.cpp
src/Http/: HttpConstantStrings.cpp  HttpForm.cpp  HttpRequest.cpp  HttpRequestCookies.cpp  HttpRequestData.hpp  HttpRequestExtensions.cpp  HttpRequestHeaders.cpp  HttpResponse.cpp  HttpResponseData.hpp  HttpResponseExtensions.cpp  HttpResponseHeaders.cpp
src/Http/Client/: HttpClient.cpp  HttpClientFactoryImpl.cpp  HttpClientImpl.cpp  HttpClientImpl.hpp  HttpClientMetricsData.cpp  HttpClientMetricsData.hpp  HttpClientRequest.cpp  HttpClientRequestImpl.cpp  HttpClientRequestImpl.hpp  HttpClientResponse.cpp  HttpClientResponseImpl.cpp  HttpClientResponseImpl.hpp
src/HttpServer/: HttpServer.cpp  HttpServerConfiguration.cpp  HttpServerConfigurationData.cpp  HttpServerConfigurationData.hpp  HttpServerData.cpp  HttpServerData.hpp  HttpServerMetricsData.cpp  HttpServerMetricsData.hpp  HttpServerRequest.cpp  HttpServerResponse.cpp  HttpServerSharedData.cpp  HttpServerSharedData.hpp
src/HttpServer/Connections/: Http11Parser.cpp  Http11Parser.hpp  Http11ServerConnection.cpp  Http11ServerConnection.hpp  Http11ServerConnectionRequestStream.cpp  Http11ServerConnectionRequestStream.hpp  Http11ServerConnectionResponseStream.cpp  Http11ServerConnectionResponseStream.hpp  HttpServerConnectionBase.hpp
src/HttpServer/Handlers/: HttpServerRequest404Handler.cpp  HttpServerRequest500Handler.cpp  HttpServerRequestRealLastHandler.cpp  HttpServerRequestRealLastHandler.hpp  HttpServerRequestRoutingHandler.cpp  HttpServerRequestStaticFileHandler.cpp
src/Logging/: ConsoleLogger.cpp  ConsoleLogger.hpp  Logger.cpp  NoopLogger.cpp  NoopLogger.hpp
src/Module/: DefaultModule.cpp  Module.cpp  PrometheusModule.cpp
src/Serialize/: JsonDeserializer.sajson.cpp  JsonSerializer.JsonEncodeMapping.hpp  JsonSerializer.cpp
src/Stream/: BufferInputStream.cpp  BuffersInputStream.cpp  InputStreamExtensions.cpp  OutputStreamExtensions.cpp  PacketInputStream.cpp  PacketOutputStream.cpp  StringInputStream.cpp  StringOutputStream.cpp  StringViewInputStream.cpp
src/Testing/: GTestUtils.cpp
src/Utility/: BufferUtils.cpp  ConstantStrings.cpp  DateUtils.cpp  FileUtils.cpp  HttpUtils.HtmlEncodeMapping.inc  HttpUtils.HtmlEntitiesMapping.hpp  HttpUtils.MimeMapping.hpp  HttpUtils.UrlEncodeMapping.hpp  HttpUtils.cpp  NetworkUtils.cpp  Packet.cpp  SharedString.cpp  SharedStringBuilder.cpp  StringUtils.cpp  UUIDUtils.cpp  Uri.cpp
tests/: CMakeLists.txt  Main.cpp  run_tests.sh  tool_cppcheck.sh  travis_run_tests.sh
tests/Cases/Allocators/: TestDebugAllocator.cpp  TestStackAllocator.Map.cpp  TestStackAllocator.Vector.cpp  TestStackAllocator.cpp
tests/Cases/Application/: TestApplication.cpp
tests/Cases/Application/Modules/: TestHttpServerModule.cpp  TestHttpServerRoutingModule.cpp  TestLoggingModule.cpp
tests/Cases/Container/: TestAop.cpp  TestContainer.cpp
tests/Cases/Exceptions/: TestException.cpp
tests/Cases/Http/: TestApiDocs.cpp  TestClient.cpp  TestHandler.cpp  TestHttpForm.cpp  TestHttpRequest.cpp  TestHttpRequestExtensions.cpp  TestHttpResponse.cpp  TestHttpResponseExtensions.cpp  TestHttpd.cpp  TestRoute.cpp  TestServer.cpp
tests/Cases/HttpServer/: TestHttpContext.cpp  TestHttpContextExtensions.cpp  TestHttpServer.Base.cpp  TestHttpServer.Base.hpp  TestHttpServer.Http11.cpp  TestHttpServerConfiguration.cpp
tests/Cases/HttpServer/Handlers/: TestHttpServerRequest404Handler.cpp  TestHttpServerRequest500Handler.cpp  TestHttpServerRequestRoutingHandler.cpp  TestHttpServerRequestStaticFileHandler.cpp
tests/Cases/Logging/: TestLogger.cpp
tests/Cases/Module/: TestDefaultModule.cpp  TestPrometheusModule.cpp
tests/Cases/Serialize/: TestFormDeserializer.cpp  TestFormSerializer.cpp  TestJsonDeserializer.cpp  TestJsonSerializer.cpp
tests/Cases/Stream/: TestBufferInputStream.cpp  TestBuffersInputStream.cpp  TestInputStreamExtensions.cpp  TestOutputStreamExtensions.cpp  TestPacketInputStream.cpp  TestPacketOutputStream.cpp  TestStringInputStream.cpp  TestStringOutputStream.cpp  TestStringViewInputStream.cpp
tests/Cases/Utility/: TestBufferUtils.cpp  TestCodeInfo.cpp  TestDateUtils.cpp  TestEnumUtils.cpp  TestFileUtils.cpp  TestHashUtils.cpp  TestHttpUtils.cpp  TestJsonUtils.cpp  TestLRUCache.cpp  TestNetworkUtils.cpp  TestObject.cpp  TestObjectTrait.cpp  TestPacket.cpp  TestPacketUtils.cpp  TestReusable.cpp  TestSharedString.cpp  TestSharedStringBuilder.cpp  TestSocketHolder.cpp  TestStringUtils.cpp  TestUUIDUtils.cpp  TestUri.cpp
tests/Cases/Web/: TestServiceHandler.cpp
tests/TestUtility/: GTestUtils.cpp  GTestUtils.hpp
tmp/: CMakeLists.txt  Main.cpp  run_release_tmp.sh  run_tmp.sh  run_tmp_debug.sh  run_tmp_release.sh
tools/: make-gzip.sh
(+133 files in other folders)
